--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     content="Google Developers Group is an initiative to concentrate the efforts of many developers in and around world to learn, share and get productive using the various Google products." />
     <meta name="keywords" content="GDG, Google, Google Developers Groups, Aura, Aura main, Aura admin, Admin, Vue, Vuetify">
     
+
+    <!-- Link to awsomefonts -->
+    <link rel="stylesheet" href="./css/all.min.css"/>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84991751-1"></script>
   <script>
